--- a/init.org
+++ b/init.org
@@ -137,13 +137,13 @@ need the menus, use ~<F10>~.
 #+begin_src emacs-lisp
 (setopt sentence-end-double-space nil)
 
-(setq inhibit-startup-screen t)
+(setq inhibit-startup-screen t
+      custom-file (locate-user-emacs-file "custom.el")
+      use-short-answers t) ; y-or-n-p
 
 (menu-bar-mode -1)
 (scroll-bar-mode -1)
 (tool-bar-mode -1)
-
-(setq custom-file (locate-user-emacs-file "custom.el"))
 #+end_src
 
 * Appearance
