--- a/init.org
+++ b/init.org
@@ -378,6 +378,7 @@ There's likely going to be more added here
 
 (use-package org-tempo
   :ensure nil
+  :demand
   :config
   (add-to-list 'org-structure-template-alist '("el" . "src emacs-lisp")))
 #+end_src
